syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message GetNumsRequest {
    int64 firstNum = 1;
    int64 lastNum = 2;
}

message GetNumResponse {
    int64 num = 1;
}

service NumService {
    rpc getNumbers(GetNumsRequest) returns (stream GetNumResponse);
}
